# DCSketch

./: .gitignore  0000.txt  CMakeLists.txt  find_distribution.mlx  generate_dist.mlx  int prog.mlx  mawi0000.txt  prep data.mlx  read data.mlx  test.mlx  test1.mlx  test2.mlx  transx.mlx  untitled.mlx
.cache/clangd/index/: Couper.cpp.BFDF2BC190C7A85F.idx  Couper.h.4BF2E4AD569D2A3F.idx  MurmurHash3.cpp.1C40367A47060028.idx  MurmurHash3.h.0C73435290751D1E.idx  bSkt.cpp.4A5BE8B83E183005.idx  bSkt.h.AF589F2293D7D4C8.idx  get_groundtruth.cpp.450E1A18A5A3197E.idx  hashfunc.h.22A2DC7AE35AAFC3.idx  mylibpcap.cpp.70226FEEE4DFA9A3.idx  mylibpcap.h.1796FEC0E9A55192.idx  param_setting.cpp.9379826BAE7EB5C1.idx  rerskt.cpp.2466B32FC8B435A6.idx  rerskt.h.7886464771EC9C5B.idx  test.cpp.2A6A8A6CB2870991.idx  test_Couper.cpp.56BDC7E407CFF121.idx  test_acc.cpp.45F1E630C2E0BA24.idx  test_bSkt.cpp.3ED3BC7E8499B61B.idx  test_rerskt.cpp.C50E6397BA3F1E30.idx  test_vHLL.cpp.8458E0AA7D62624E.idx  util.h.843B04DA2A0DDA23.idx  vHLL.cpp.25DD78FB2AA6D671.idx  vHLL.h.6D29D88C388BD3B7.idx
CAIDA/: 0000.txt
CDS/: CMakeLists.txt
CDS/include/: cds.h
CDS/src/: cds.cpp  test_cds.cpp
Couper/: CMakeLists.txt
Couper/include/: Couper.h
Couper/src/: Couper.cpp  ParameterSetting.cpp  test_Couper.cpp
DCS/: CMakeLists.txt
DCS/include/: dcs.h
DCS/output/KAGGLE/: Unicauca.txt
DCS/src/: dcs.cpp  test_dcs.cpp
DCSketch/: CMakeLists.txt
DCSketch/include/: DCSketch.h  MAP.h  MLE.h
DCSketch/output/MetaData/CAIDA/: 0000sketch.txt  0000sketch_dist.txt
DCSketch/output/MetaData/MAWI/: 0000sketch.txt  0000sketch_dist.txt
DCSketch/output/PerFlowSpread/KAGGLE/: 1000_Unicauca.txt  1250_Unicauca.txt  1500_Unicauca.txt  1750_Unicauca.txt  2000_Unicauca.txt  500_Unicauca.txt  750_Unicauca.txt
DCSketch/output/PerFlowSpread/MAWI/: 1000_pkts_frag_00001.txt  1000_pkts_frag_00002.txt  1250_pkts_frag_00001.txt  1250_pkts_frag_00002.txt  1500_pkts_frag_00001.txt  1500_pkts_frag_00002.txt  1750_pkts_frag_00001.txt  1750_pkts_frag_00002.txt  2000_pkts_frag_00001.txt  2000_pkts_frag_00002.txt  500_pkts_frag_00001.txt  500_pkts_frag_00002.txt  750_pkts_frag_00001.txt  750_pkts_frag_00002.txt
DCSketch/output/SuperChanges/CAIDA/: 1000_CAIDA.txt  1500_CAIDA.txt  2000_CAIDA.txt  500_CAIDA.txt
DCSketch/output/SuperChanges/KAGGLE/: 2000_KAGGLE.txt
DCSketch/output/SuperChanges/MAWI/: 1000_MAWI.txt  1500_MAWI.txt  2000_MAWI.txt  500_MAWI.txt
DCSketch/output/SuperSpreaders/CAIDA/: 1000_5M_frag (1).txt  1500_5M_frag (1).txt  2000_5M_frag (1).txt  500_5M_frag (1).txt
DCSketch/output/SuperSpreaders/KAGGLE/: 750_Unicauca.txt
DCSketch/output/SuperSpreaders/MAWI/: 1000_pkts_frag_00001.txt
DCSketch/src/: DCSketch.cpp  MAP.cpp  MLE.cpp  ParameterSetting.cpp  test_DCSketch.cpp
DCSketch/superspreaders/MAWI/: 0000.txt
DCSketch/support/: error_removal.txt
Distribution_Estimation/: CMakeLists.txt
Distribution_Estimation/include/: Bayesian_Estimation.h
Distribution_Estimation/src/: MLE.cpp
MAWI/: 0000.txt
MurmurHash3/include/: hashfunc.h
SpreadSketch/: CMakeLists.txt
SpreadSketch/include/: SS.h
SpreadSketch/output/MAWI/: 0000.txt
SpreadSketch/src/: SS.cpp  test_SS.cpp
Vector_BF/: CMakeLists.txt
Vector_BF/include/: Vector_BF.h
Vector_BF/src/: Vector_BF.cpp  test_VBF.cpp
bSkt/: CMakeLists.txt
bSkt/SuperSpreader/CAIDA/: 5M_frag (1).txt
bSkt/SuperSpreader/KAGGLE/: Unicauca.txt
bSkt/SuperSpreader/MAWI/: pkts_frag_00001.txt
bSkt/include/: bSkt.h
bSkt/src/: bSkt.cpp  test_bSkt.cpp
calc_accuracy/: CMakeLists.txt
calc_accuracy/src/: param_setting.cpp  test_acc.cpp
get_groundtruth/: CMakeLists.txt
get_groundtruth/SuperChanges/: CAIDA.txt  KAGGLE.txt  MAWI.txt
get_groundtruth/SuperSpreaders/CAIDA/: 5M_frag (1).txt  5M_frag (2).txt
get_groundtruth/SuperSpreaders/KAGGLE/: Unicauca.txt
get_groundtruth/SuperSpreaders/MAWI/: pkts_frag_00001.txt  pkts_frag_00002.txt
get_groundtruth/distribution/CAIDA18/:  (2)rev.txt
get_groundtruth/distribution/KAGGLE/: auca.txt  aucarev.txt
get_groundtruth/distribution/MAWI/: 0000.txt
get_groundtruth/src/: get_groundtruth.cpp
get_groundtruth/truth/CAIDA/: 5M_frag (1)_global.txt  5M_frag (2)_global.txt  5M_frag (3)_global.txt  5M_frag (4)_global.txt  5M_frag (5)_global.txt
get_groundtruth/truth/CAIDA18/: 5M_frag (1)_global.txt  5M_frag (2)_global.txt  5M_frag (3)_global.txt  5M_frag (4)_global.txt  5M_frag (5)_global.txt
get_groundtruth/truth/IMC/: 0000_global.txt
get_groundtruth/truth/KAGGLE/: Unicauca.txt  Unicauca_1.txt  Unicauca_1_global.txt  Unicauca_2.txt  Unicauca_2_global.txt  Unicauca_global.txt
get_groundtruth/truth/MAWI/: pkts_frag_00001.txt  pkts_frag_00001_global.txt  pkts_frag_00002.txt  pkts_frag_00002_global.txt
mylibpcap/: CMakeLists.txt
mylibpcap/include/shared/: mylibpcap.h
mylibpcap/src/: mylibpcap.cpp  test.cpp
rerskt/: CMakeLists.txt
rerskt/include/: rerskt.h
rerskt/src/: rerskt.cpp  test_rerskt.cpp
util/: CMakeLists.txt
util/include/: util.h
vHLL/: CMakeLists.txt
vHLL/include/: vHLL.h
vHLL/output/KAGGLE/: Unicauca.txt
vHLL/output/MAWI/: pkts_frag_00001.txt
vHLL/src/: test_vHLL.cpp  vHLL.cpp
